fixing alignment issues

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -27,6 +27,7 @@ a{
 	width:100%;
 	position: fixed;
 	top: 0;
+	margin-top: 0px; 
 	border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
